fixed the cart menu for mobile and aligned it

--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ body {
     width: 0px;
     height: 100vh;
     background-color: #48c7a3;
-    z-index: 1;
+    z-index: 5;
     box-shadow: 0 0 30px #373737;
     pointer-events: none;
     transition: 0.3s;
@@ -99,14 +99,14 @@ body {
     opacity: 0;
     z-index: 2;
     position: absolute;
-    left: 82%;
-    bottom: 34%;
+    right: 5px;
+    top: 55px;
     width: 300px;
     height: 500px;
     pointer-events: none;
     transition: 0.3s;
     background-color: #48c7a3;
-    border-radius: 15px;
+    border-radius: 5px;
     display: flex;
     justify-content: center;
     align-items: center;
